# solchan-faucet

./: Anchor.toml  Cargo.toml  README.md  package-lock.json
programs/solchain-facuet/: Cargo.toml
programs/solchain-facuet/src/: lib.rs
tests/: solchain-facuet.ts
